// WorkLog Settlement System - Database Schema

Table user {
  id uuid [pk]
  email varchar(255) [unique, not null]
  is_active boolean [default: true]
  is_superuser boolean [default: false]
  full_name varchar(255)
  hashed_password varchar [not null]
}

Table item {
  id uuid [pk]
  title varchar(255) [not null]
  description varchar(255)
  owner_id uuid [not null, ref: > user.id]
}

Table worklog {
  id uuid [pk]
  user_id uuid [not null, ref: > user.id]
  task_name varchar(500) [not null]
  created_at datetime [not null]
  updated_at datetime [not null]

  indexes {
    user_id
    created_at
  }
}

Table time_segment {
  id uuid [pk]
  worklog_id uuid [not null, ref: > worklog.id]
  start_time datetime [not null]
  end_time datetime [not null]
  hourly_rate float [not null]
  created_at datetime [not null]

  indexes {
    worklog_id
  }
}

Table adjustment {
  id uuid [pk]
  worklog_id uuid [not null, ref: > worklog.id]
  amount float [not null, note: 'positive = addition, negative = deduction']
  reason varchar(500) [not null]
  created_at datetime [not null]

  indexes {
    worklog_id
  }
}

Table remittance {
  id uuid [pk]
  user_id uuid [not null, ref: > user.id]
  period_start date [not null]
  period_end date [not null]
  total_amount float [not null]
  status varchar(20) [not null, note: 'PENDING, SUCCESS, FAILED, CANCELLED']
  created_at datetime [not null]
  updated_at datetime [not null]

  indexes {
    user_id
    period_start
    period_end
    status
  }
}

Table remittance_worklog {
  id uuid [pk]
  remittance_id uuid [not null, ref: > remittance.id]
  worklog_id uuid [not null, ref: > worklog.id]
  amount float [not null, note: 'amount settled for this worklog in this remittance']

  indexes {
    remittance_id
    worklog_id
  }
}
